ratings-service/k8s/deployment-mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 5
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: nitesh2611/mongodb:2
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: 128Mi
            cpu: 100m

        ports:
        - containerPort: 3306
