ratings-service/k8s/deployment-ratings-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-service
spec:
  replicas: 5
  selector:
    matchLabels:
      app: ratings-service-app
  template:
    metadata:
      labels:
        app: ratings-service-app
    spec:
      containers:
      - name: ratings-service
        image: nitesh2611/ratings-svc:17
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: 128Mi
            cpu: 100m
        ports:
        - containerPort: 8083
