ratings-service/k8s/service-ratings-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ratings-service
spec:
  selector:
    app: ratings-service-app
  ports:
  - port: 8083
    targetPort: 8083
  type: ClusterIP
