ratings-service/k8s/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.user-service.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-service # Your app's service name
            port:
              number: 8081 # The port your app listens on
